# anotherai

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .prettierrc.json  CLAUDE.md  CONDITIONAL_CLERK_SETUP.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  VISION.md  backend.Dockerfile  docker-compose.yml  docs.Dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini  server.json  web.Dockerfile
.claude/: settings.json
.claude/agents/: docs-reviewer.md
.claude/hooks/: git-commit-ruff-check.py
.cursor/rules/: python.mdc
.github/workflows/: .azure-build-deploy.yml  .backend-quality.yml  .build-azure.yml  .build-ghcr.yml  .claude-code-review.yml  .deploy.yml  .doc-quality.yml  .web-quality.yml  claude.yml  main.yml  production.yml  quality.yml  staging.yml
backend/: .dockerignore  conftest.py
backend/.claude/: settings.local.json
backend/core/: conftest.py  consts.py
backend/core/agents/: _client.py  search_documentation.py  suggest_model.py
backend/core/domain/: _autogenerated_id.py  agent.py  agent_completion.py  agent_input.py  agent_output.py  annotation.py  api_key.py  cache_usage.py  consts.py  deployment.py  documentation_section.py  error.py  events.py  exceptions.py  experiment.py  fallback_option.py  file.py  finish_reason.py  image_options.py  inference_usage.py  message.py  metrics.py  page.py  reasoning_effort.py  task_io.py  task_io_test.py  tenant_data.py  tenant_data_test.py  tool.py  tool_call.py  tool_call_error.py  tool_choice.py  trace.py  typology.py  user_identifier.py  version.py  version_test.py  view.py
backend/core/logs/: _posthog_processor.py  _posthog_processor_test.py  _pydantic_processor.py  _pydantic_processor_test.py  _sentry_processor.py  _sentry_processor_test.py  global_setup.py  setup_logs.py  setup_logs_test.py
backend/core/runners/: _message_fixer.py  _message_fixer_test.py  _message_renderer.py  _message_renderer_test.py  _runner_file_handler.py  agent_completion_builder.py  agent_completion_builder_test.py  output_factory.py  provider_pipeline.py  provider_pipeline_test.py  runner.py  runner_output.py  runner_test.py  utils.py
backend/core/services/: completion_runner.py  documentation_search.py  documentation_search_test.py  email_service.py  file_service.py  models_service.py  payment_service.py  user_manager.py  user_service.py
backend/core/storage/: _default_storage_builder.py  agent_storage.py  annotation_storage.py  completion_storage.py  deployment_storage.py  experiment_storage.py  file_storage.py  kv_storage.py  storage_builder.py  tenant_storage.py  user_storage.py  view_storage.py
backend/core/utils/: aeshmac.py  audio.py  background.py  coroutines.py  dicts.py  dicts_test.py  dump.py  dump_test.py  fields.py  fields_test.py  files.py  hash.py  hash_test.py  iter_utils.py  iter_utils_test.py  json_utils.py  json_utils_test.py  previews.py  previews_test.py  remote_cached.py  remote_cached_test.py  schema_gen.py  schema_gen_test.py  schema_sanitation.py  schema_sanitation_test.py  schemas.py  schemas_test.py  signature_verifier.py  signature_verifier_test.py  sql.py  sql_test.py  (+11 more)
backend/tests/: asgi_transport.py  fake_models.py  utils.py
demo/data-generator/: CLAUDE.md  generate_calendar_demo.py
demo/debug-agent/: CLAUDE.md
docs/: .prettierignore  .prettierrc.json  CLAUDE.md  config.json  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tailwind.config.js
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/components/: copy-markdown-button.tsx  rate.tsx  status-monitor.tsx  toc-dropdown.tsx  workflow-model-count.tsx  workflow-models-table.tsx  workflow-models-wrapper.tsx
docs/lib/: cn.ts  get-llm-text.ts  source.ts  template-replacement.ts
examples/quickstart/: INSTRUCTIONS.md  docker-compose.yml
scripts/: _common.py  check_mistral_models.py  clickhouse_migrate.py  local_reset.py  psql_migrate.py
web/: .gitignore  components.json  eslint.config.mjs  jest.config.js  jest.config.ts  jest.setup.js  mdx-components.tsx  next.config.ts  package.json  tailwind.config.js  tsconfig.clerk.json  tsconfig.json
web/scripts/: bundle-preview-content.js
web/src/: middleware.ts
(+696 files in other folders)
